[package]
name = "build-env"
version = "0.0.2"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "Extract information about the build process from the environment"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jmesmon/build-env"
documentation = "http://codyps.com/docs/build-env/x86_64-unknown-linux-gnu/stable/build_env/index.html"

[dependencies]
