[package]
name = "build-env"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "Extract information about the build process from the environment"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jmesmon/build-env"
documentation = "https://docs.rs/crate/build-env"

[dependencies]
